--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
   </head>
   <body>
     <div id="root"></div>
+    <form name="contact" data-netlify="true" hidden>
+      <div>
+        <input type="text" name="name" placeholder="Name" />
+      </div>
+      <div>
+        <input type="email" name="email" placeholder="Email" />
+      </div>
+      <div>
+        <textarea name="message" placeholder="Message"></textarea>
+      </div>
+    </form>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
