--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div id="root"></div>
     <form name="contact" data-netlify="true" hidden>
       <div>
-        <input type="text" name="name" placeholder="Name" />
+        <input type="text" name="name" placeholder="Name" id="name" />
       </div>
       <div>
-        <input type="email" name="email" placeholder="Email" />
+        <input type="email" name="email" placeholder="Email" id="email"/>
       </div>
       <div>
-        <textarea name="message" placeholder="Message"></textarea>
+        <textarea name="message" placeholder="Message" id="message"></textarea>
       </div>
     </form>
     <script type="module" src="/src/main.jsx"></script>
