--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <form name="contact" data-netlify="true" hidden>
+    <form name="contact" data-netlify="true" hidden action='./src/Pages/About.jsx'>
       <div>
         <input type="text" name="name" placeholder="Name" id="name" />
       </div>
